<resources>
    <!-- AndroidManifest.xml -->
    <string name="app_name">NoteSquirrel</string>

    <!-- activity_main.xml -->
    <string name="edit_text_hint">Enter your text here.</string>
    <string name="save">Save</string>
    <string name="lock">Lock</string>

    <!-- options_menu_activity_main.xml -->
    <string name="toast_cant_save">Unable to save note. Is there sufficient space?</string>
    <string name="menu_passpoints_reset">Reset Passpoints</string>
    <string name="menu_camera">Take a Photo</string>
    <string name="unable_to_save_photo_file">Unable to save photo file.</string>
    <string name="menu_gallery">Browse the Gallery</string>
    <string name="menu_list_view_email">See a ListView (email, statePressed)</string>
    <string name="menu_download_html_fragment_parent">Download Html (internet communication)</string>
    <string name="menu_grid_view_dvd">See a GridView</string>
    <string name="menu_list_fragment_dvd">See a ListFragment (DVD)</string>
    <string name="menu_dvd_library">DVD Library</string>
    <string name="menu_passing_through">Passing Through</string>
    <string name="menu_sprite_sheet_verifier1">Sprite Sheet Verifier 1 (MS Clippit)</string>
    <string name="menu_auto_pilot_off">AutoPilot:Off</string>
    <string name="menu_ide">IDE</string>
    <string name="menu_world_of_box">World of Box</string>
    <string name="menu_sprite_sheet_verifier2">Sprite Sheet Verifier 2 (R-Series)</string>
    <string name="menu_meal_maker_3000_cashier">MealMaker3000 Cashier</string>
    <string name="menu_count_zero">Count Zero</string>
    <string name="menu_jack_in">Jack In</string>

    <!-- activity_list_viewer -->
    <string-array name="list_book_title">
        <item>Neuromancer</item>
        <item>Count Zero</item>
        <item>Mona Lisa Overdrive</item>
    </string-array>

    <!-- activity_image.xml -->
    <string name="password_image">Password Image</string>
    <string name="storing_data">Storing passpoints...</string>

    <!-- fragment_welcome_screen -->
    <string-array name="game_titles">
        <item>Pocket Critters</item>
        <item>Pooh Farmer</item>
        <item>Evo</item>
        <item>Pong</item>
        <item>Frogger</item>
    </string-array>

    <!-- MENUS -->
    <!-- activity_auto_pilot_off.xml -->
    <string name="geo_quiz_menu_item">Geo Quiz</string>
    <string name="hello_moon_menu_item">Hello Moon</string>
    <string name="remote_control_menu_item">Remote Control</string>
    <string name="photo_gallery_menu_item">Photo Gallery</string>
    <string name="drag_and_draw_menu_item">Drag And Draw</string>
    <!-- fragment_crime_list.xml -->
    <string name="new_crime_menu_item">New Crime</string>
    <!-- fragment_crime.xml -->
    <string name="summon_clippy_menu_item">summon clippy</string>

    <!-- fragment_quiz.xml --> <!-- GEO_QUIZ -->
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="prev_button">Prev</string>
    <string name="next_button">Next</string>
    <!-- QuizFragment.java --> <!-- GEO_QUIZ -->
    <string name="geo_quiz_title">Geo Quiz</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="question_oceans">The Pacific Ocean is larger than
        the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
        and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river
        in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest
        freshwater lake.</string>
    <!-- fragment_cheat.xml --> <!-- GEO_QUIZ -->
    <string name="cheat_button">Cheat!</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="judgment_toast">Cheating is wrong.</string>

    <!-- fragment_crime.xml --> <!-- CRIMINAL_INTENT -->
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved?</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <!-- CrimeFragment.java --> <!-- CRIMINAL_INTENT -->
    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">There is no suspect.</string>
    <string name="crime_report_suspect">The suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <!-- CrimeListFragment.java --> <!-- CRIMINAL_INTENT -->
    <string name="crimes_title">Crimes</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">If you see something, say something.</string>
    <string name="delete_crime">Delete</string>
    <!-- DatePickerFragment.java --> <!-- CRIMINAL_INTENT -->
    <string name="date_picker_title">Date of crime:</string>
    <string name="time_picker_title">Time of crime:</string>
    <!--fragment_crime_camera.xml --> <!-- CRIMINAL_INTENT -->
    <string name="take">Take!</string>

    <!-- fragment_hello_moon.xml --> <!-- HELLO_MOON -->
    <string name="hellomoon_title">Hello Moon</string>
    <string name="hellomoon_play">Play</string>
    <string name="hellomoon_stop">Stop</string>
    <string name="hellomoon_description">Jack fishing with his wife and dog</string>

    <!-- fragment_project_wizard -->
    <string name="projectwizard_new_project_button">Create New Project</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
