<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_passpoints_reset"
        android:title="@string/menu_passpoints_reset" />
    <item
        android:id="@+id/menu_camera"
        android:title="@string/menu_camera" />
    <item
        android:id="@+id/menu_gallery"
        android:title="@string/menu_gallery" />
    <item
        android:id="@+id/menu_list_view_email"
        android:title="@string/menu_list_view_email" />
    <item
        android:id="@+id/menu_download_html_fragment_parent"
        android:title="@string/menu_download_html_fragment_parent" />
    <item
        android:id="@+id/menu_grid_view_dvd"
        android:title="@string/menu_grid_view_dvd" />
    <item
        android:id="@+id/menu_list_fragment_dvd"
        android:title="@string/menu_list_fragment_dvd" />
    <item
        android:id="@+id/menu_recycler_view_dvd"
        android:title="@string/menu_recycler_view_dvd" />
    <item
        android:id="@+id/menu_passing_through"
        android:title="@string/menu_passing_through" />
    <item
        android:id="@+id/menu_sprite_sheet_verifier1"
        android:title="@string/menu_sprite_sheet_verifier1" />
    <item
        android:id="@+id/menu_sprite_sheet_verifier2"
        android:title="@string/menu_sprite_sheet_verifier2" />
    <item
        android:id="@+id/menu_rest_client"
        android:title="@string/menu_rest_client" />
    <item
        android:id="@+id/menu_count_zero"
        android:title="@string/menu_count_zero" />
    <item
        android:id="@+id/menu_jack_in"
        android:title="@string/menu_jack_in" />
</menu>