<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_passpoints_reset"
        android:title="@string/menu_passpoints_reset" />
    <item
        android:id="@+id/menu_camera"
        android:title="@string/menu_camera" />
    <item
        android:id="@+id/menu_gallery"
        android:title="@string/menu_gallery" />
    <item
        android:id="@+id/menu_list"
        android:title="@string/menu_list" />
    <item
        android:id="@+id/menu_tileset_util"
        android:title="Tileset Util" />
    <item
        android:id="@+id/menu_sprite_sheet_viewer"
        android:title="View Sprite Sheets (MS Clippit)" />
    <item
        android:id="@+id/menu_fragment_parent_dvd"
        android:title="Learn about Fragment (DVD)" />
    <item
        android:id="@+id/menu_communication"
        android:title="Learn Internet Communication" />
    <item
        android:id="@+id/menu_motion_event"
        android:title="Tinker Motion Event" />
    <item
        android:id="@+id/menu_television_activity"
        android:title="Television Activity" />
    <item
        android:id="@+id/menu_computer_activity"
        android:title="Computer Activity" />
    <item
        android:id="@+id/menu_jack_in"
        android:title="Jack In" />
</menu>